# Room-booking-service

./: README.md
room-booking-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
room-booking-service/alembic/: env.py
room-booking-service/src/app/: config.py  main.py  seed.py
room-booking-service/src/app/api/: deps.py
room-booking-service/src/app/api/v1/: auth.py  bookings.py  rooms.py  slots.py
room-booking-service/src/app/core/: exceptions.py  security.py
room-booking-service/src/app/db/: session.py
room-booking-service/src/app/models/: __init__.py  booking.py  room.py  slot.py  user.py
room-booking-service/src/app/schemas/: auth.py  booking.py  room.py  slot.py
room-booking-service/src/app/services/: auth.py  booking.py  room.py  slot.py
room-booking-service/tests/: conftest.py
room-booking-service/tests/integration/: test_api.py
room-booking-service/tests/unit/: test_auth.py  test_booking.py
