[project]
name = "room-booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "MelnikovS5",email = "semenmelnikov87@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "aiosqlite",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "pydantic-settings",
    "python-multipart",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.12",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
